@@ -260,6 +260,9 @@ FAIL font-variant-alternates: "swash(unknown)" onto "stylistic(unknown)" assert_
 PASS font-variant-east-asian (type: discrete) has testAccumulation function
 PASS font-variant-east-asian: "proportional-width" onto "full-width"
 PASS font-variant-east-asian: "full-width" onto "proportional-width"
+PASS font-variant-ligatures (type: discrete) has testAccumulation function
+PASS font-variant-ligatures: "no-common-ligatures" onto "common-ligatures"
+PASS font-variant-ligatures: "common-ligatures" onto "no-common-ligatures"
 PASS font-variation-settings (type: fontVariationSettings) has testAccumulation function
 FAIL font-variation-settings with composite type accumulate assert_equals: The value should be "wght" 2.2 at 250ms expected "\"wght\" 2.2" but got "\"wght\" 1.2"
 PASS font-variation-settings (type: discrete) has testAccumulation function
