@@ -2633,6 +2633,49 @@ private:
 #endif
 };
 
+class FontVariantLigaturesWrapper final : public AnimationPropertyWrapperBase {
+    WTF_MAKE_FAST_ALLOCATED;
+public:
+    FontVariantLigaturesWrapper()
+        : AnimationPropertyWrapperBase(CSSPropertyFontVariantLigatures)
+    {
+    }
+
+private:
+    bool canInterpolate(const RenderStyle&, const RenderStyle&, CompositeOperation) const override { return false; }
+
+    bool equals(const RenderStyle& a, const RenderStyle& b) const override
+    {
+        auto& aFontDescription = a.fontDescription();
+        auto& bFontDescription = b.fontDescription();
+        return aFontDescription.variantCommonLigatures() == bFontDescription.variantCommonLigatures()
+            && aFontDescription.variantDiscretionaryLigatures() == bFontDescription.variantDiscretionaryLigatures()
+            && aFontDescription.variantHistoricalLigatures() == bFontDescription.variantHistoricalLigatures()
+            && aFontDescription.variantContextualAlternates() == bFontDescription.variantContextualAlternates();
+    }
+
+    void blend(RenderStyle& destination, const RenderStyle& from, const RenderStyle& to, const CSSPropertyBlendingContext& context) const override
+    {
+        ASSERT(!context.progress || context.progress == 1.0);
+        auto& sourceFontDescription = (context.progress ? to : from).fontDescription();
+
+        FontSelector* currentFontSelector = destination.fontCascade().fontSelector();
+        auto description = destination.fontDescription();
+        description.setVariantCommonLigatures(sourceFontDescription.variantCommonLigatures());
+        description.setVariantDiscretionaryLigatures(sourceFontDescription.variantDiscretionaryLigatures());
+        description.setVariantHistoricalLigatures(sourceFontDescription.variantHistoricalLigatures());
+        description.setVariantContextualAlternates(sourceFontDescription.variantContextualAlternates());
+        destination.setFontDescription(WTFMove(description));
+        destination.fontCascade().update(currentFontSelector);
+    }
+
+#if !LOG_DISABLED
+    void logBlend(const RenderStyle&, const RenderStyle&, const RenderStyle&, double) const override
+    {
+    }
+#endif
+};
+
 class CSSPropertyAnimationWrapperMap final {
     WTF_MAKE_FAST_ALLOCATED;
 public:
@@ -2970,7 +3013,8 @@ CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap()
         new DiscretePropertyWrapper<WindRule>(CSSPropertyFillRule, &RenderStyle::fillRule, &RenderStyle::setFillRule),
         new DiscretePropertyWrapper<FontSynthesis>(CSSPropertyFontSynthesis, &RenderStyle::fontSynthesis, &RenderStyle::setFontSynthesis),
         new DiscretePropertyWrapper<FontVariantAlternates>(CSSPropertyFontVariantAlternates, &RenderStyle::fontVariantAlternates, &RenderStyle::setFontVariantAlternates),
-        new FontVariantEastAsianWrapper
+        new FontVariantEastAsianWrapper,
+        new FontVariantLigaturesWrapper
     };
     const unsigned animatableLonghandPropertiesCount = WTF_ARRAY_LENGTH(animatableLonghandPropertyWrappers);
 
