@@ -1,3 +1,13 @@
+2022-03-10  Antoine Quint  <graouts@webkit.org>
+
+        [web-animations] font-variant-ligatures should support discrete animation
+        https://bugs.webkit.org/show_bug.cgi?id=237667
+
+        Reviewed by Myles C. Maxfield.
+
+        * animation/CSSPropertyAnimation.cpp:
+        (WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):
+
 2022-03-10  Lauro Moura  <lmoura@igalia.com>
 
         Unreviewed, non-unified build fix after 248260@main
